--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,9 @@
         <button type="button" class="pure-button" onclick="setAlgorithm('DFS')">DFS</button>
         <button type="button" class="pure-button" onclick="setAlgorithm('BestFS')">BestFS</button>
         <button type="button" class="pure-button" onclick="setAlgorithm('A')">A*</button>
+        <button type="button" class="pure-button" onclick="setAlgorithm('Dijkstra')">Dijkstra</button>
       </div>
+      <button type="button" class="pure-button" id="setGrid" onclick="setGrid()">Set Grid</button>
       <button type="button" class="pure-button" id="start" onclick="search()">Start</button>
     </div>
     <div class="pure-u-2-3" id="grid">
